2006-08-23  Lapo Luchini  <lapo@lapo.it>

	* po/it.po: Updated and translated a few more strings (40 to go).

2006-08-23  Jon Bright  <jon@siliconcircus.com>

	* tests/diff_against_empty_file/__driver__.lua: Canonicalize the
	output before checking.

2006-08-23  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* tests/diff_against_empty_file/expected.diff:
	* tests/diff_against_empty_file/__driver__.lua: Instead of
	checking if the resulting patch file applies correctly, compare it
	to a correct prestored copy.  This is to prevent a bug in some
	patch(1) implementations that do not deal correctly with reversed
	patches applied to empty files.  Problem exposed under NetBSD.

2006-08-23  Jon Bright  <jon@siliconcircus.com>

	* automate.cc: add new automate genkey command, avoiding people
	having to enter into a little chat script with monotone in order to
	provide genkey with an alternative interface.
	* tests/automate_genkey: Test it.
	* testsuite.lua: Add the test
	* cmd_automate.cc: Bump the interface version to 3.1

	* tests/automate_genkey: Fix the test.

2006-08-23  Richard Levitte  <richard@levitte.org>

	* monotone.texi (Hooks): The hooks merge2 and
	get_preferred_merge2_command are dead.  Remove them from
	documentation as well.

2006-08-23  Richard Levitte  <richard@levitte.org>

	* std_hooks.lua: The previous change wasn't entirely wise.
	So, a larger rework is in order to make the merging methods
	more intelligent, as follows.
	(mergers): all mergers now have an `available' and a `wanted'
	function, to distinguish between availability of the programs
	needed by each merger method and a check if the user wants to
	use a perticular merger.
	(mergers.rcsmerge.cmd): Use a hardcoded "vim" instead of the
	non-existing variable `vim'.  This is untested and may need
	further correction.
	(get_preferred_merge3_command): If the user defined $MTN_MERGE
	or the lua variable `merger', use it if the needed programs
	are available, and fail if not.  If neither was defined, go